force-app/main/default/objects/Trip__c/fields/Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Driver_ID__c</fullName>
    <label>Driver ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>