force-app/main/default/objects/Trip__c/fields/End_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>End_Location_Address__c</fullName>
    <label>End Location Address</label>
    <type>TextArea</type>
</CustomField>