force-app/main/default/objects/Trip__c/fields/End_Location_Longitude__c.field-meta.xml
<CustomField>
    <fullName>End_Location_Longitude__c</fullName>
    <label>End Location Longitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>