force-app/main/default/objects/Trip__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <label>Group ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>