force-app/main/default/objects/Trip__c/fields/Scheduled_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Time__c</fullName>
    <label>Scheduled End Time</label>
    <type>DateTime</type>
</CustomField>