force-app/main/default/objects/Trip__c/fields/Scheduled_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Time__c</fullName>
    <label>Scheduled Start Time</label>
    <type>DateTime</type>
</CustomField>