force-app/main/default/objects/Trip__c/fields/Start_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Address__c</fullName>
    <label>Start Location Address</label>
    <type>TextArea</type>
</CustomField>