force-app/main/default/objects/Trip__c/fields/Start_Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Latitude__c</fullName>
    <label>Start Location Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>