force-app/main/default/objects/Trip__c/fields/Trip_ID__c.field-meta.xml
<CustomField>
    <fullName>Trip_ID__c</fullName>
    <externalId>true</externalId>
    <label>Trip ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>