force-app/main/default/objects/Trip__c/fields/Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ID__c</fullName>
    <label>Vehicle ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>